--- a/src/_data/nav.yml
+++ b/src/_data/nav.yml
@@ -7,6 +7,8 @@
   children:
     - name: join
       path: join/
+    - name: newsletter
+      path: newsletter/
 - name: Blog
   path: blog/
   section_id: blog
