--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "autoprefixer": "^6.2.3",
     "babel-core": "^6.5.0",
     "babel-eslint": "^5.0.0-beta9",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.11.0",
     "del": "^2.2.0",
     "eslint": "^1.10.3",
@@ -23,22 +23,23 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^1.1.1",
     "gulp-gzip": "^1.1.0",
-    "gulp-htmlmin": "^1.3.0",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.1.0",
-    "gulp-inject": "^3.0.0",
+    "gulp-imagemin": "^3.0.0",
+    "gulp-inject": "^4.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-newer": "^1.1.0",
     "gulp-postcss": "^6.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^6.0.0",
+    "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.1.1",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.5.1",
     "gulp-uncss": "^1.0.0",
-    "shelljs": "^0.6.0",
-    "yargs": "^3.31.0",
-    "gulp-rsync": "^0.0.5"
+    "shelljs": "^0.7.0",
+    "yargs": "^4.7.0",
+    "gulp-rsync": "^0.0.5",
+    "require-dir": "^0.3.0"
   }
 }
