Fix meeting info

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -37,16 +37,16 @@
   month: September 2016
   topic: "Clarifying Beer, bring your malty homebrew"
   homebrew: true
-- location: Wild Rose Barracks
-  location_url: https://goo.gl/maps/FRLXJ5ctg4K2
+- location: The Vineyard
+  location_url: https://goo.gl/maps/qLCwRUykPZ82
   month: October 2016
   topic: Home Casking
   homebrew: false
-- location: Village Brewing
-  location_url: https://goo.gl/maps/PNx7eJ1Qe952
+- location: Wild Rose Barracks
+  location_url: https://goo.gl/maps/FRLXJ5ctg4K2
   month: November 2016
   topic: Recipe Formulation
   homebrew: false
 - location: TBD
-  month: November 2016
+  month: December 2016
   topic: Members only Xmas Party
