--- a/src/_data/nav.yml
+++ b/src/_data/nav.yml
@@ -15,8 +15,9 @@
   path: blog/
   section_id: blog
 - name: Forums
-  path:
+  path: https://muut.com/cowtownyeastwranglers
   section_id: forums
+  external: true
 - name: Contact
   path: contact/
   section_id: contact
