December Meeting updates

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -47,6 +47,7 @@
   month: November 2016
   topic: Recipe Formulation
   homebrew: false
-- location: TBD
+- location: Tool Shed Brewing
+  location_url: https://goo.gl/maps/TuUJmfqAPNQ2
   month: December 2016
-  topic: Members only Xmas Party
+  topic: <a href='/monthly%20meetings/December-2016-Meeting-at-Tool-Shed.html'>Get the Deatils</a>
