--- a/src/_data/nav.yml
+++ b/src/_data/nav.yml
@@ -11,6 +11,9 @@
       path: newsletter/
     - name: resources
       path: resources/
+- name: Meetings
+  path: meetings/
+  section_id: meetings
 - name: Blog
   path: blog/
   section_id: blog
