fix contact page, more text shadows, add topic url, remove unused icon

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -2,22 +2,17 @@
   location_url: https://goo.gl/maps/qLCwRUykPZ82
   month: January 4th 2017
   topic: Brewing for competition
-  homebrew: true
+  topic_url: http://www.yeastwranglers.ca/forums/#!/club-announcements-and-even:january-4th-meeting
 - month: February 1st 2017
   location: TBD
-  homebrew: true
 - month: March 1st 2017
   location: TBD
-  homebrew: true
 - month: April 5th 2017
   location: TBD
-  homebrew: true
 - month: May 3rd 2017
   location: TBD
-  homebrew: true
 - month: June 7th 2017
   location: TBD
-  homebrew: true
 - month: July 2017
   location: TBD
   topic: (no meeting) Summer BBQ
@@ -26,13 +21,9 @@
   topic: (no meeting) Pub Social
 - month: September 6th 2017
   location: TBD
-  homebrew: true
 - month: October 4th 2017
   location: TBD
-  homebrew: true
 - month: November 1st 2017
   location: TBD
-  homebrew: true
 - month: December 6th 2017
   location: TBD
-  homebrew: true
