--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "gulp-uncss": "^1.0.0",
     "shelljs": "^0.7.0",
     "yargs": "^4.7.0",
-    "gulp-rsync": "^0.0.5",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "gulp-awspublish": "^3.2.0",
+    "concurrent-transform": "^1.0.0"
   }
 }
