Add a sponsors page

--- a/src/_data/nav.yml
+++ b/src/_data/nav.yml
@@ -11,6 +11,8 @@
       path: newsletter/
     - name: resources
       path: resources/
+    - name: sponsors
+      path: sponsors/
 - name: Meetings
   path: meetings/
   section_id: meetings
