--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: Yeast Wranglers www
 url:
 
 # Used so Jekyll outputs the site correctly so Gulp can do what it wants
-source: src
-destination: dist
+source: .tmp/src
+destination: .tmp/dist
 exclude: ['assets']
 
 # Same as the title etc for your site but can instead be
