Add more meetings, change meetings to calendar
post about getting to the community center

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -3,16 +3,40 @@
   month: January 4th 2017
   topic: Brewing for competition
   topic_url: http://www.yeastwranglers.ca/forums/#!/club-announcements-and-even:january-4th-meeting
+  type: Monthly Meeting
 - month: February 1st 2017
-  location: TBD
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  topic: Sour Brewing Technique &amp; Gadget Night Show and Tell
+  type: Monthly Meeting
 - month: March 1st 2017
-  location: TBD
+  location: Village Brewing
+  location_url: https://goo.gl/maps/VZv3R7FjEHH2
+  type: Monthly Meeting
+- month: March 26th - April 1st 2017
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  topic: Cowtown Yeast Wranglers Homebrew Roundup 2017
+  topic_url: http://yeastwranglers.brewcompetition.com/
+  type: Annual Homebrew Competition
+- month: April 1st 2017
+  location: National on 8th
+  location_url: http://ntnl.ca/national-on-8th/home-ntnl8
+  topic: The Spectacular Awards Banquet
 - month: April 5th 2017
-  location: TBD
+  location: The Vineyard
+  location_url: https://goo.gl/maps/qLCwRUykPZ82
+  topic: Rich Joy - Canada Malting &amp; Triangle Test
+  type: Monthly Meeting
 - month: May 3rd 2017
-  location: TBD
+  location: Big Rock
+  location_url: https://goo.gl/maps/C6WWQJasMbS2
+  type: Monthly Meeting
 - month: June 7th 2017
-  location: TBD
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  topic: Home Brewers Gone Pro
+  type: Monthly Meeting
 - month: July 2017
   location: TBD
   topic: (no meeting) Summer BBQ
@@ -20,10 +44,20 @@
   location: TBD
   topic: (no meeting) Pub Social
 - month: September 6th 2017
-  location: TBD
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  topic: Fruiting Beer
+  type: Monthly Meeting
 - month: October 4th 2017
-  location: TBD
+  location: Wild Rose Barracks Room
+  location_url: https://goo.gl/maps/6Z13u9sewRU2
+  type: Monthly Meeting
 - month: November 1st 2017
-  location: TBD
+  location: The Vineyard
+  location_url: https://goo.gl/maps/qLCwRUykPZ82
+  topic: Cooking with Beer
+  type: Monthly Meeting
 - month: December 6th 2017
   location: TBD
+  topic: Holiday Social
+  type: Monthly Meeting
