Minor style tweaks, new blog posts, tickets option

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -12,6 +12,7 @@
 - month: March 1st 2017
   location: Village Brewing
   location_url: https://goo.gl/maps/VZv3R7FjEHH2
+  tickets: https://www.eventbrite.ca/e/village-brewery-march-meeting-tickets-32175449636
   type: Monthly Meeting
 - month: March 26th - April 1st 2017
   location: Canyon Glen Recreation Center
