--- a/src/_data/slides.yml
+++ b/src/_data/slides.yml
@@ -6,7 +6,15 @@
   buttons:
     items:
       - text: Read More
-        link_to: /roundup/The-Cowtown-Yeast-Wranglers-homebrew-club-is-proud-to-present-The-9th-annual-2017-Homebrew-Roundup.html
+        link_to: http://www.yeastwranglers.ca/roundup/The-Cowtown-Yeast-Wranglers-homebrew-club-is-proud-to-present-The-9th-annual-2017-Homebrew-Roundup.1.html
+- background: assets/images/stock/bottle-caps.jpg
+  title:
+    main: March Meeting
+    sub: Get tickets
+  buttons:
+    items:
+      - text: Buy
+        link_to: 'https://www.eventbrite.ca/e/village-brewery-march-meeting-tickets-32175449636'
 - background: assets/images/stock/refreshing-beer.jpg
   title:
     main: Support the Club
