Add ticket url to calendar

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -24,6 +24,7 @@
   location: National on 8th
   location_url: http://ntnl.ca/national-on-8th/home-ntnl8
   topic: The Spectacular Awards Banquet
+  tickets: https://www.eventbrite.ca/e/9th-annual-ctyw-homebrew-roundup-awards-gala-tickets-32728038444?
 - month: April 5th 2017
   location: The Vineyard
   location_url: https://goo.gl/maps/qLCwRUykPZ82
