--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -28,16 +28,16 @@
 - month: April 5th 2017
   location: The Vineyard
   location_url: https://goo.gl/maps/qLCwRUykPZ82
-  topic: Rich Joy - Canada Malting &amp; Triangle Test
+  topic: Home Brewers Gone Pro &amp; Triangle Test
   type: Monthly Meeting
 - month: May 3rd 2017
-  location: Big Rock
-  location_url: https://goo.gl/maps/C6WWQJasMbS2
-  type: Monthly Meeting
-- month: June 7th 2017
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Home Brewers Gone Pro
+  topic: Rich Joy - Canada Malting
+  type: Monthly Meeting
+- month: June 7th 2017
+  location: Big Rock
+  location_url: https://goo.gl/maps/C6WWQJasMbS2
   type: Monthly Meeting
 - month: July 2017
   location: TBD
