--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "yeast-wranglers",
   "version": "0.0.0",
   "description": "Yeast Wranglers www",
-  "homepage": "",
+  "homepage": "http://www.yeastwranglers.ca",
   "author": {
     "name": "chrisvdp",
     "email": "chris@chrisvdp.com"
+  },
+  "scripts": {
+    "deploy": "gulp build --prod && gulp deploy",
+    "start": "gulp"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
