Apperantly, not everything happens at 8PM

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -4,16 +4,19 @@
   topic: Brewing for competition
   topic_url: http://www.yeastwranglers.ca/forums/#!/club-announcements-and-even:january-4th-meeting
   type: Monthly Meeting
+  time: 8PM
 - month: February 1st 2017
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   topic: Sour Brewing Technique &amp; Gadget Night Show and Tell
   type: Monthly Meeting
+  time: 8PM
 - month: March 1st 2017
   location: Village Brewing
   location_url: https://goo.gl/maps/VZv3R7FjEHH2
   tickets: https://www.eventbrite.ca/e/village-brewery-march-meeting-tickets-32175449636
   type: Monthly Meeting
+  time: 8PM
 - month: March 26th - April 1st 2017
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
@@ -30,15 +33,18 @@
   location_url: https://goo.gl/maps/qLCwRUykPZ82
   topic: Home Brewers Gone Pro &amp; Triangle Test
   type: Monthly Meeting
+  time: 8PM
 - month: May 3rd 2017
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   topic: Rich Joy - Canada Malting
   type: Monthly Meeting
+  time: 8PM
 - month: June 7th 2017
   location: Big Rock
   location_url: https://goo.gl/maps/C6WWQJasMbS2
   type: Monthly Meeting
+  time: 7:30PM
 - month: July 2017
   location: TBD
   topic: (no meeting) Summer BBQ
@@ -50,16 +56,20 @@
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   topic: Fruiting Beer
   type: Monthly Meeting
+  time: 8PM
 - month: October 4th 2017
   location: Wild Rose Barracks Room
   location_url: https://goo.gl/maps/6Z13u9sewRU2
   type: Monthly Meeting
+  time: 8PM
 - month: November 1st 2017
   location: The Vineyard
   location_url: https://goo.gl/maps/qLCwRUykPZ82
   topic: Cooking with Beer
   type: Monthly Meeting
+  time: 8PM
 - month: December 6th 2017
   location: TBD
   topic: Holiday Social
   type: Monthly Meeting
+  time: 8PM
