summer BBQ update

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -45,9 +45,10 @@
   location_url: https://goo.gl/maps/C6WWQJasMbS2
   type: Monthly Meeting
   time: 7:30PM
-- month: July 2017
-  location: TBD
-  topic: (no meeting) Summer BBQ
+  tickets: https://www.eventbrite.ca/e/yeast-wranglers-june-2017-meetup-tour-tickets-34736720466
+- month: July 22nd 2017
+  location: Kevins and Judy's (exact location to follow)
+  topic: Summer BBQ
 - month: August 2017
   location: TBD
   topic: (no meeting) Pub Social
