update membership form and meetings

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -49,6 +49,7 @@
 - month: July 22nd 2017
   location: Kevins and Judy's (exact location to follow)
   topic: Summer BBQ
+  tickets: https://www.eventbrite.ca/e/ctyw-summer-bbq-tickets-35950640333
 - month: August 2017
   location: TBD
   topic: (no meeting) Pub Social
