--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -60,14 +60,11 @@
   type: Monthly Meeting
   time: 8PM
 - month: October 4th 2017
-  location: Wild Rose Barracks Room
-  location_url: https://goo.gl/maps/6Z13u9sewRU2
+  location: TBD
   type: Monthly Meeting
   time: 8PM
 - month: November 1st 2017
-  location: The Vineyard
-  location_url: https://goo.gl/maps/qLCwRUykPZ82
-  topic: Cooking with Beer
+  location: TBD
   type: Monthly Meeting
   time: 8PM
 - month: December 6th 2017
