--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -50,9 +50,6 @@
   location: Kevins and Judy's (exact location to follow)
   topic: Summer BBQ
   tickets: https://www.eventbrite.ca/e/ctyw-summer-bbq-tickets-35950640333
-- month: August 2017
-  location: TBD
-  topic: (no meeting) Pub Social
 - month: September 6th 2017
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
@@ -60,15 +57,18 @@
   type: Monthly Meeting
   time: 8PM
 - month: October 4th 2017
-  location: TBD
+  location: CRAFT Beer Market
+  location_url: https://goo.gl/maps/4S73C5Dh7UG2
   type: Monthly Meeting
   time: 8PM
 - month: November 1st 2017
-  location: TBD
+  location: Beer Worx Inc
+  location_url: https://goo.gl/maps/m1fv19xdVHD2
   type: Monthly Meeting
   time: 8PM
 - month: December 6th 2017
-  location: TBD
+  location: Craft Beer Market
+  location_url: https://goo.gl/maps/4S73C5Dh7UG2
   topic: Holiday Social
   type: Monthly Meeting
   time: 8PM
