--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -1,74 +1,43 @@
-- location: The Vineyard
-  location_url: https://goo.gl/maps/qLCwRUykPZ82
-  month: January 4th 2017
-  topic: Brewing for competition
-  topic_url: http://www.yeastwranglers.ca/forums/#!/club-announcements-and-even:january-4th-meeting
+- location: Wild Rose (Barracks Room)
+  location_url: https://goo.gl/maps/3skWMeBbodM2
+  month: January 3rd 2017
+  topic: Collaboration Brew
+  topic_url: http://www.yeastwranglers.ca/monthly%20meetings/January-Meeting.html
   type: Monthly Meeting
   time: 8PM
-- month: February 1st 2017
-  location: Canyon Glen Recreation Center
-  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Sour Brewing Technique &amp; Gadget Night Show and Tell
+- month: February 7th 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: March 1st 2017
-  location: Village Brewing
-  location_url: https://goo.gl/maps/VZv3R7FjEHH2
-  tickets: https://www.eventbrite.ca/e/village-brewery-march-meeting-tickets-32175449636
+- month: March 7th 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: March 26th - April 1st 2017
-  location: Canyon Glen Recreation Center
-  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Cowtown Yeast Wranglers Homebrew Roundup 2017
-  topic_url: http://yeastwranglers.brewcompetition.com/
-  type: Annual Homebrew Competition
-- month: April 1st 2017
-  location: National on 8th
-  location_url: http://ntnl.ca/national-on-8th/home-ntnl8
-  topic: The Spectacular Awards Banquet
-  tickets: https://www.eventbrite.ca/e/9th-annual-ctyw-homebrew-roundup-awards-gala-tickets-32728038444?
-- month: April 5th 2017
-  location: The Vineyard
-  location_url: https://goo.gl/maps/qLCwRUykPZ82
-  topic: Home Brewers Gone Pro &amp; Triangle Test
+- month: April 4th 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: May 3rd 2017
-  location: Canyon Glen Recreation Center
-  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Rich Joy - Canada Malting
+- month: May 2nd 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: June 7th 2017
-  location: Big Rock
-  location_url: https://goo.gl/maps/C6WWQJasMbS2
-  type: Monthly Meeting
-  time: 7:30PM
-  tickets: https://www.eventbrite.ca/e/yeast-wranglers-june-2017-meetup-tour-tickets-34736720466
-- month: July 22nd 2017
-  location: Kevins and Judy's (exact location to follow)
-  topic: Summer BBQ
-  tickets: https://www.eventbrite.ca/e/ctyw-summer-bbq-tickets-35950640333
-- month: September 6th 2017
-  location: Canyon Glen Recreation Center
-  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Fruiting Beer
+- month: June 6th 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: October 4th 2017
-  location: CRAFT Beer Market
-  location_url: https://goo.gl/maps/4S73C5Dh7UG2
+- month: September 5th 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: November 1st 2017
-  location: Beer Worx Inc
-  location_url: https://goo.gl/maps/m1fv19xdVHD2
+- month: October 3rd 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: December 6th 2017
-  location: Craft Beer Market
-  location_url: https://goo.gl/maps/4S73C5Dh7UG2
-  topic: Holiday Social
+- month: November 7th 2017
+  location: TBD
+  type: Monthly Meeting
+  time: 8PM
+- month: December 5th 2017
+  location: TBD
   type: Monthly Meeting
   time: 8PM
