--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -6,7 +6,9 @@
   type: Monthly Meeting
   time: 8PM
 - month: February 7th 2017
-  location: TBD
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  topic: Wild Rose Wort Challenge
   type: Monthly Meeting
   time: 8PM
 - month: March 7th 2017
