Update hop dawgs logo

--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -48,7 +48,7 @@
     socials:
       - link: http://www.royalliquormerchants.com/
         icon: link
-  - image: /assets/images/sponsors/HopDawgs.jpg
+  - image: /assets/images/sponsors/HopDawgs.png
     name: Hop Dawgs
     benefit: 6% off regularly priced supplies
     socials:
