--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -12,7 +12,8 @@
   type: Monthly Meeting
   time: 8PM
 - month: March 7th 2017
-  location: TBD
+  location: The Vineyard
+  location_url: https://goo.gl/maps/gvKYTHiMpxu
   type: Monthly Meeting
   time: 8PM
 - month: April 4th 2017
