--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -1,46 +1,61 @@
 - location: Wild Rose (Barracks Room)
   location_url: https://goo.gl/maps/3skWMeBbodM2
-  month: January 3rd 2017
+  month: January 3rd 2018
   topic: Collaboration Brew
   topic_url: http://www.yeastwranglers.ca/monthly%20meetings/January-Meeting.html
   type: Monthly Meeting
   time: 8PM
-- month: February 7th 2017
+- month: February 7th 2018
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   topic: Wild Rose Wort Challenge
   type: Monthly Meeting
   time: 8PM
-- month: March 7th 2017
+- month: March 7th 2018
   location: The Vineyard
   location_url: https://goo.gl/maps/gvKYTHiMpxu
   type: Monthly Meeting
   time: 8PM
-- month: April 4th 2017
-  location: TBD
+- month: April 4th 2018
+  location: Paddy's BBQ and Brewery
+  location_url: https://goo.gl/maps/v5oG7mmuYAA2
+  type: Monthly Meeting
+  topic: Paddy's BBQ Take Over, Artisan Malting
+  time: 7PM
+- month: May 2nd 2018
+  location: Tool Shed, Red Bison, Common Crown Breweries
+  type: Monthly Meeting
+  topic: Walking Tour of NE Breweries
+  time: 8PM
+- month: June 6th 2018
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  topic: Lost Beer Styles Competition Judging, Alberta Beer Style Semi-Finals Competition - Invent a Triticalebased beer style
   type: Monthly Meeting
   time: 8PM
-- month: May 2nd 2017
+- month: August
+  topic: Club BBQ
   location: TBD
+- month: September 5th 2018
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
+  type: Monthly Meeting
+  topic: Hops Grower Association talk, Judging Triticale-based beer style
+  time: 8PM
+- month: October 3rd 2018
+  location: The Vineyard
+  location_url: https://goo.gl/maps/gvKYTHiMpxu
+  topic: Cider Brewing Talk by a Calgary Cider Maker
   type: Monthly Meeting
   time: 8PM
-- month: June 6th 2017
-  location: TBD
+- month: November 7th 2018
+  location: SAIT of Cookbook Co.
+  topic: Cooking with Beer
   type: Monthly Meeting
   time: 8PM
-- month: September 5th 2017
-  location: TBD
-  type: Monthly Meeting
-  time: 8PM
-- month: October 3rd 2017
-  location: TBD
-  type: Monthly Meeting
-  time: 8PM
-- month: November 7th 2017
-  location: TBD
-  type: Monthly Meeting
-  time: 8PM
-- month: December 5th 2017
-  location: TBD
+- month: December 5th 2018
+  location: Pioneer Memorial Building
+  location_url: https://goo.gl/maps/AuCBqyyT2tJ2
+  topic: Holiday Social
   type: Monthly Meeting
   time: 8PM
