May meeting update

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -24,8 +24,10 @@
   time: 7PM
 - month: May 2nd 2018
   location: Tool Shed, Red Bison, Common Crown Breweries
+  location_url: /monthly%20meetings/May-2018-Brewery-Crawl-Meeting.html
   type: Monthly Meeting
   topic: Walking Tour of NE Breweries
+  topic_url: /monthly%20meetings/May-2018-Brewery-Crawl-Meeting.html
   time: 8PM
 - month: June 6th 2018
   location: Canyon Glen Recreation Center
