summer BBQ update

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -26,7 +26,7 @@
   location: Tool Shed, Red Bison, Common Crown Breweries
   location_url: /monthly%20meetings/May-2018-Brewery-Crawl-Meeting.html
   type: Monthly Meeting
-  topic: Walking Tour of NE Breweries
+  topic: Walking Tour of NE Breweries`
   topic_url: /monthly%20meetings/May-2018-Brewery-Crawl-Meeting.html
   time: 8PM
 - month: June 6th 2018
@@ -35,9 +35,11 @@
   topic: Lost Beer Styles Competition Judging, Alberta Beer Style Semi-Finals Competition - Invent a Triticalebased beer style
   type: Monthly Meeting
   time: 8PM
-- month: August
-  topic: Club BBQ
-  location: TBD
+- month: August 18, 2018
+  time: 3PM - It ends
+  topic: Summer Club BBQ
+  location: Richard Petr’s acreage (address & directions will be send to signed up guests)
+  tickets: https://www.eventbrite.ca/e/ctyw-summer-bbq-tickets-47876682446
 - month: September 5th 2018
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
