meeting moved to inner city

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -59,8 +59,8 @@
   type: Monthly Meeting
   time: 8PM
 - month: December 5th 2018
-  location: Pioneer Memorial Building
-  location_url: https://goo.gl/maps/AuCBqyyT2tJ2
+  location: Inner City Brewing
+  location_url: https://www.innercitybrewing.ca/
   topic: Holiday Social
   type: Monthly Meeting
   time: 8PM
