--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -62,5 +62,6 @@
   location: Inner City Brewing
   location_url: https://www.innercitybrewing.ca/
   topic: Holiday Social
+  topic_url: /monthly%20meetings/The-Christmas-Social.html
   type: Monthly Meeting
-  time: 8PM
+  time: 7:30PM
