--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -1,67 +1,46 @@
-- location: Wild Rose (Barracks Room)
-  location_url: https://goo.gl/maps/3skWMeBbodM2
-  month: January 3rd 2018
-  topic: Collaboration Brew
-  topic_url: http://www.yeastwranglers.ca/monthly%20meetings/January-Meeting.html
+- location: Cabin Brewing Company
+  location_url: https://www.cabinbrewing.ca/
+  month: January 9th 2019
   type: Monthly Meeting
   time: 8PM
-- month: February 7th 2018
-  location: Canyon Glen Recreation Center
-  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Wild Rose Wort Challenge
+- month: February 6th 2019
+  location: The Establishment Brewing Company
+  location_url: https://establishmentbrewing.ca/
   type: Monthly Meeting
   time: 8PM
-- month: March 7th 2018
+- month: March 6th 2019
   location: The Vineyard
   location_url: https://goo.gl/maps/gvKYTHiMpxu
   type: Monthly Meeting
   time: 8PM
-- month: April 4th 2018
-  location: Paddy's BBQ and Brewery
-  location_url: https://goo.gl/maps/v5oG7mmuYAA2
-  type: Monthly Meeting
-  topic: Paddy's BBQ Take Over, Artisan Malting
-  time: 7PM
-- month: May 2nd 2018
-  location: Tool Shed, Red Bison, Common Crown Breweries
-  location_url: /monthly%20meetings/May-2018-Brewery-Crawl-Meeting.html
-  type: Monthly Meeting
-  topic: Walking Tour of NE Breweries`
-  topic_url: /monthly%20meetings/May-2018-Brewery-Crawl-Meeting.html
-  time: 8PM
-- month: June 6th 2018
-  location: Canyon Glen Recreation Center
-  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
-  topic: Lost Beer Styles Competition Judging, Alberta Beer Style Semi-Finals Competition - Invent a Triticalebased beer style
+- month: April 3rd 2019
+  location: Bow River Brewing
+  location_url: https://goo.gl/maps/7p4MPuyp5T72
   type: Monthly Meeting
   time: 8PM
-- month: August 18, 2018
-  time: 3PM - It ends
-  topic: Summer Club BBQ
-  location: Richard Petr’s acreage (address & directions will be send to signed up guests)
-  tickets: https://www.eventbrite.ca/e/ctyw-summer-bbq-tickets-47876682446
-- month: September 5th 2018
+- month: May 1st 2019
   location: Canyon Glen Recreation Center
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   type: Monthly Meeting
-  topic: Hops Grower Association talk, Judging Triticale-based beer style
   time: 8PM
-- month: October 3rd 2018
-  location: The Vineyard
-  location_url: https://goo.gl/maps/gvKYTHiMpxu
-  topic: Cider Brewing Talk by a Calgary Cider Maker
+- month: June 5th 2019
+  location: Canyon Glen Recreation Center
+  location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   type: Monthly Meeting
   time: 8PM
-- month: November 7th 2018
-  location: The Vineyard
-  location_url: https://goo.gl/maps/gvKYTHiMpxu
-  topic: All About Yeast. Starters, setting up a home-lab. 
+- month: September 4th 2019
+  location: TBD
   type: Monthly Meeting
   time: 8PM
-- month: December 5th 2018
-  location: Inner City Brewing
-  location_url: https://www.innercitybrewing.ca/
-  topic: Holiday Social
-  topic_url: /monthly%20meetings/The-Christmas-Social.html
+- month: October 2nd 2019
+  location: TBD
   type: Monthly Meeting
-  time: 7:30PM
+  time: 8PM
+- month: November 6th 2019
+  location: TBD
+  type: Monthly Meeting
+  time: 8PM
+- month: December 4th 2019
+  location: TBD
+  type: Monthly Meeting
+  time: 8PM
