--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -28,6 +28,15 @@
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   type: Monthly Meeting
   time: 8PM
+- month: July 20th 2019
+  location: Barley Belt
+  type: Social
+  time: 12 noon
+  tickets: https://www.eventbrite.ca/e/ctyw-barley-belt-walk-tickets-65265813806
+- month: Saturday August 17th
+  location: tbd
+  time: tbd
+  type: Summer BBQ
 - month: September 4th 2019
   location: TBD
   type: Monthly Meeting
