update meetings, remove outdated slides

--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -34,11 +34,13 @@
   time: 12 noon
   tickets: https://www.eventbrite.ca/e/ctyw-barley-belt-walk-tickets-65265813806
 - month: Saturday August 17th
-  location: tbd
-  time: tbd
+  location: Details will be emailed to signed up guests
+  time: 3PM
   type: Summer BBQ
+  tickets: https://www.eventbrite.ca/e/return-of-the-ctyw-summer-bbq-tickets-67788472145
 - month: September 4th 2019
-  location: TBD
+  location: The Vineyard
+  location_url: https://goo.gl/maps/gvKYTHiMpxu
   type: Monthly Meeting
   time: 8PM
 - month: October 2nd 2019
